# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: .secrets.yml  flake8.yml  tests.yml
gendiff/: generate_diff.py  stylish.py
gendiff/scripts/: gendiff.py
gendiff/tests/: test.py
tests/: test.py
tests/fixtures/: test2_file1.json  test3.txt  test3_file1.json  test4.txt
tests/fixtures/test for json/: test2.txt  test3_file2.json  test4_file2.json
tests/fixtures/test for yaml/: test2_file1.yml  test3_file1.yml  test3_file2.yml  test4_file1.yml  test4_file2.yml
