[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Евгений Николаев <saqatod@gmail.com>"]
packages = [
  { include = "gendiff"}
]

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^3.9.0"
wemake-python-styleguide = "^0.15.2"
pytest = "^6.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
